2009-01-21  Esteban Sanchez  <estebans@artica.es>

	* pandoradb.sql, pandoradb_migrate_20_to_21.sql: Added id_agent field
	to tlayout_data. It's needed to give support to nodes in visual
	console that represents a whole agent which turns red if any module is
	down.

	* operation/visual_console/render_view.php: Removed refresh countdown
	and selection because it's now done in the page header.

	* include/functions_visual_map.php: Some fixes to support id_agent
	field in tlayout_data. Also fixed the SQL to check if any module on an
	agent is down.

	* godmode/reporting/map_builder.php: Update and insert id_agent when
	managing a node element.

	* include/styles/pandora.css: Added a style to input image elements.

2009-01-21  Esteban Sanchez  <estebans@artica.es>

	* godmode/agentes/alert_manager.php: Added the hability to delete
	actions and alert (only when it has no actions).

	* include/functions_alerts.php: Added delete_alert_agent_module() and
	delete_alert_agent_module_action().

2009-01-21  Esteban Sanchez  <estebans@artica.es>

	* godmode/alerts/configure_alert_template.php,
	include/functions_alerts.php: Added missing matches_value field on
	creation and updating.

	* ChangeLog: Added missing path to files on previous commit.

2009-01-21  Sancho Lerena <slerena@artica.es>

	* pandoradb_migrate_20_to_21.sql: Fixes some problems.
	
	* godmode/setup/setup.php: Removed AD setup tokens.
	
	* godmode/users/user_list.php: Link to user edition was wrong.
	Restored.
	
	* include/functions_db.php: Support for new auth modules was missing
	and fgraph fails to render graphs.

2009-01-20  Esteban Sanchez  <estebans@artica.es>

	* godmode/alerts/configure_alert_template.php: Fixed an error when
	setting max and min values on template creation.

	* godmode/menu.php: Default action on "Manage alerts" is showing the
	templates now.

2009-01-20  Sancho Lerena <slerena@artica.es>

	* install.php: Added ldap module dep.
	