@@ -65,8 +65,8 @@ foreach ($modules as $module) {
 	} else {
 		$data[0] = '';
 	}
-	
-	$data[1] = '<img src="images/'.show_icon_type ($module["id_tipo_modulo"]).'" border="0">';
+	$data[1] = show_server_type ($module['id_modulo']);
+	$data[1] .= ' <img src="images/'.show_icon_type ($module["id_tipo_modulo"]).'" border="0">';
 	if (give_acl ($config['id_user'], $id_grupo, "AW")) 
 	  $data[1] .= '<a href="index.php?sec=gagente&sec2=godmode/agentes/configurar_agente&id_agente='.$id_agente.'&tab=module&update_module='.$module["id_agente_modulo"].'&moduletype=2#modules"><img src="images/config.png"></a>';
 	$data[2] = substr ($module["nombre"], 0, 25);
@@ -93,7 +93,7 @@ foreach ($modules as $module) {
 	}
 	
 	$seconds = get_system_time () - $module["utimestamp"];
-	if ($module["current_interval"] > 0 && $module["utimestamp"] > 0 && $seconds >= ($module["current_interval"] * 2)) {
+	if ($module['id_tipo_modulo'] < 21 && $module["current_interval"] > 0 && $module["utimestamp"] > 0 && $seconds >= ($module["current_interval"] * 2)) {
 		$data[6] = '<span class="redb">';
 	} else {
 		$data[6] = '<span>';
